Update powsybl-core dependency 6.3.0 (#70)
Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>